--- a/popup.html
+++ b/popup.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>My Extension Popup</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h1 style="padding-left: 10px; padding-right:10px;">Short Link Saver</h1>
-  <button id="savebtn" style="padding: 10px;">Click to save!</button>
-  <br>
-  <button id="copybtn" style="padding: 10px;">Copy All save Links</button>
+  <h1 style="text-align: center; padding: 25px 50px;">Short Link Saver</h1>
+  <button class="button-81" id="savebtn">Save Link</button>
+  <!-- <div style="padding: 25px 50px;"></div> -->
+  <button class="button-81" id="copybtn">Copy Links</button>
   <script src="popup.js"></script>
-
+  <button class="button-82" id="clearbtn">Clear Links</button>
 </body>
 </html>
