Changed some text and added detiles

--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Extension Popup</title>
+  <title>Shorts Links Copy Extension</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h1 style="text-align: center; padding: 25px 50px;">Short Link Saver</h1>
+  <h1 style="text-align: center; padding: 25px 50px;">Short Links Saver</h1>
   <button class="button-81" id="savebtn">Save Link</button>
-  <!-- <div style="padding: 25px 50px;"></div> -->
   <button class="button-81" id="copybtn">Copy Links</button>
   <script src="popup.js"></script>
   <button class="button-82" id="clearbtn">Clear Links</button>
